# hourcoin

./: .gitignore  Cargo.toml  README.md
docs/: Roadmap.md  protocol_draft.txt
src/: Cargo.toml  block.rs  blockchain.rs  hashable.rs  lib.rs  main.rs  server.rs  transaction.rs
src/chain/: Cargo.toml  block.rs  blockchain.rs  hashable.rs  lib.rs  transaction.rs
src/network/: Cargo.toml  client.rs  lib.rs  server.rs
