[package]
name = "hourcoin_server"
version = "0.1.0"
authors = ["Nitesh <niteshkartha@yahoo.com>"]
edition = "2018"

[[bin]]
name = "client"
path = "client.rs"

[[bin]]
name = "server"
path = "server.rs"

[lib]
name = "protocol"
path = "lib.rs"

[dependencies]
byteorder = "1.3.4"
structopt = "0.3.14"
bincode = "1.3.3"
serde = {version = "1.0.126", features = ["derive"]}